update api spec file
